Fixed padding on header when on mobile

--- a/themes/custom/assets/css/components/header.css
+++ b/themes/custom/assets/css/components/header.css
@@ -78,5 +78,6 @@
   }
   .header ul {
     justify-content: center;
+    padding: 0;
   }
 }
